# mines-godot

./: .gitignore  Only2D  TsGdRs.gdextension  export_presets.cfg  main.tscn  main_ui.tscn  mine_cell.tscn  project.godot
.godot/: extension_list.cfg  global_script_class_cache.cfg
rsext/: Cargo.toml
rsext/src/: cell.rs  lib.rs  main_scen.rs
scripts/: cell.gd  main.gd
style/: cell_style_empty.tres  cell_style_mine.tres  cell_style_unknow.tres  cell_style_w1.tres  cell_style_w2.tres  cell_style_w3.tres  cell_style_w4.tres  cell_style_w5.tres  cell_style_w6.tres  cell_style_w7.tres  cell_style_w8.tres
