[package]
name = "rsext"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
default-features = false

[dependencies.mines]
# path = "D:/workspace/.project/rust/mines-rs"
git = "https://github.com/RogenDong/mines-rs"
branch = "main"
